--- a/mappa.html
+++ b/mappa.html
@@ -49,11 +49,10 @@
             const marker = L.marker(biblioCoords).addTo(map);
             marker.bindPopup("<b>Biblioteca Elsa Morante</b><br>Via Adolfo Cozza, 7").openPopup();
 
-            // Aggiungi il percorso principale
+            // Aggiungi il percorso principale (modificato con i nuovi punti)
             const percorso = [
-                [41.733125, 12.271883], // Partenza da Via del Mare
-                [41.732850, 12.272200], // Nuova coordinata per scendere verso sinistra
-                [41.7325117, 12.2718834]  // Biblioteca
+                [41.732574, 12.271914], // Punto di partenza
+                [41.732007, 12.270994]  // Punto di arrivo
             ];
 
             // Disegna il percorso
@@ -61,18 +60,8 @@
                 color: '#0000FF',
                 weight: 4,
                 opacity: 0.8,
-                dashArray: '10, 10'
+                dashArray: '10, 10'  // Linea tratteggiata
             }).addTo(map);
-
-            // Aggiungi freccia per indicare la direzione verso la biblioteca
-            const arrowIcon = L.divIcon({
-                className: 'leaflet-div-icon',
-                html: '<div style="transform: rotate(-45deg); font-size: 20px; color: red;">&#8595;</div>',
-                iconSize: [20, 20]
-            });
-
-            // Aggiungi marker con freccia
-            L.marker([41.732850, 12.272200], {icon: arrowIcon}).addTo(map);
 
             // Aggiungi box informativo
             const info = L.control();
@@ -80,7 +69,7 @@
                 this._div = L.DomUtil.create('div', 'info-box');
                 this._div.innerHTML = '<h4>Biblioteca Elsa Morante</h4>' +
                     'Via Adolfo Cozza, 7<br>' +
-                    'Percorso evidenziato in blu con freccia rossa';
+                    'Percorso evidenziato in blu';
                 return this._div;
             };
             info.addTo(map);
