--- a/mappa.html
+++ b/mappa.html
@@ -49,14 +49,14 @@
             const marker = L.marker(biblioCoords).addTo(map);
             marker.bindPopup("<b>Biblioteca Elsa Morante</b><br>Via Adolfo Cozza, 7").openPopup();
 
-            // Aggiungi il percorso (stradina di servizio)
+            // Punti intermedi per il percorso
             const percorso = [
                 biblioCoords,                    // Punto di partenza: Biblioteca Elsa Morante
-                [41.732210, 12.271703],          // Punti intermedi lungo la stradina
-                [41.732315, 12.271511],          
-                [41.732400, 12.271400],         
-                [41.732500, 12.271200],          
-                [41.732007, 12.270994]          // Punto di arrivo
+                [41.732154, 12.271675],
+                [41.732282, 12.271254],
+                [41.732240, 12.271230],
+                [41.732276, 12.271090],
+                [41.732092, 12.270980],        // Punto di arrivo
             ];
 
             // Disegna il percorso
@@ -73,7 +73,7 @@
                 this._div = L.DomUtil.create('div', 'info-box');
                 this._div.innerHTML = '<h4>Biblioteca Elsa Morante</h4>' +
                     'Via Adolfo Cozza, 7<br>' +
-                    'Percorso evidenziato in blu (stradina di servizio)';
+                    'Percorso evidenziato in blu';
                 return this._div;
             };
             info.addTo(map);
