--- a/mappa.html
+++ b/mappa.html
@@ -62,23 +62,21 @@
             }).openPopup();
 
             // Aggiungi l'icona dell'ufficio tecnico
-            const officeIcon = L.divIcon({
-                html: `<svg width="24" height="24" viewBox="0 0 24 24" fill="#444">
-                        <path d="M3,11h18v2h-18z M4,5v2h16v-2h-16z M21,19h-18v-2h18v2z"/>
-                        <path d="M12,2l-8,4v2h16v-2l-8-4z"/>
-                      </svg>`,
-                className: 'custom-icon',
+            const templeIcon = L.divIcon({
+                html: `<svg width="24" height="24" viewBox="0 0 24 24" fill="#333">
+                    <path d="M12 3L2 12h3v8h14v-8h3L12 3zm0 2.7L19.7 12H4.3L12 5.7z"/>
+                </svg>`,
+                className: 'custom-temple-icon',
                 iconSize: [24, 24],
                 iconAnchor: [12, 12]
             });
 
-            const officeCoords = [41.731731, 12.271812];
-            const officeMarker = L.marker(officeCoords, {icon: officeIcon}).addTo(map);
-            officeMarker.bindPopup("<b>Ufficio Tecnico Municipio X</b>", {
+            const municipioCoords = [41.731731, 12.271812];
+            const municipioMarker = L.marker(municipioCoords, {icon: templeIcon}).addTo(map);
+            municipioMarker.bindPopup("<b>Ufficio Tecnico Municipio X</b>", {
                 className: 'custom-popup'
             });
 
-            // Aggiungi il percorso
             const percorso = [
                 biblioCoords,
                 [41.732154, 12.271675],
