--- a/mappa.html
+++ b/mappa.html
@@ -30,15 +30,29 @@
             color: #777;
         }
 
-    .custom-popup .leaflet-popup-content-wrapper {
-        background: rgba(255, 255, 255, 0.8);
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-        border-radius: 5px;
-    }
-    .custom-popup .leaflet-popup-tip {
-        background: rgba(255, 255, 255, 0.8);
-    }
+        .custom-popup .leaflet-popup-content-wrapper {
+            background: rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+        }
 
+        .custom-popup .leaflet-popup-tip {
+            background: rgba(255, 255, 255, 0.8);
+        }
+
+        /* Personalizzazione dell'icona con la scritta sotto */
+        .custom-municipio-icon {
+            text-align: center;
+            font-size: 12px;
+            color: #333;
+        }
+
+        .municipio-icon-text {
+            display: block;
+            margin-top: 5px;
+            font-size: 12px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
@@ -61,21 +75,23 @@
                 className: 'custom-popup'
             }).openPopup();
 
-            // Aggiungi l'icona dell'ufficio tecnico
-            const templeIcon = L.divIcon({
-                html: `<svg width="24" height="24" viewBox="0 0 24 24" fill="#333">
-                    <path d="M12 3L2 12h3v8h14v-8h3L12 3zm0 2.7L19.7 12H4.3L12 5.7z"/>
-                </svg>`,
-                className: 'custom-temple-icon',
-                iconSize: [24, 24],
-                iconAnchor: [12, 12]
+            // Aggiungi l'icona dell'ufficio tecnico (simbolo municipio) con il testo sotto
+            const municipioIcon = L.divIcon({
+                html: `
+                    <div class="custom-municipio-icon">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="#333">
+                            <path d="M12 3L2 12h3v8h14v-8h3L12 3zm0 2.7L19.7 12H4.3L12 5.7z"/>
+                        </svg>
+                        <span class="municipio-icon-text">Direzione Tecnica Municipio X</span>
+                    </div>
+                `,
+                className: '',
+                iconSize: [24, 40],  // Cambiato per permettere spazio per il testo
+                iconAnchor: [12, 35]  // Allineato al centro del testo
             });
 
             const municipioCoords = [41.731731, 12.271812];
-            const municipioMarker = L.marker(municipioCoords, {icon: templeIcon}).addTo(map);
-            municipioMarker.bindPopup("<b>Ufficio Tecnico Municipio X</b>", {
-                className: 'custom-popup'
-            });
+            const municipioMarker = L.marker(municipioCoords, {icon: municipioIcon}).addTo(map);
 
             const percorso = [
                 biblioCoords,
@@ -93,51 +109,50 @@
                 dashArray: '10, 10'
             }).addTo(map);
 
-fetch('https://overpass-api.de/api/interpreter', {
-    method: 'POST',
-    headers: {
-        'Content-Type': 'application/x-www-form-urlencoded'
-    },
-    body: 'data=[out:json][timeout:25];relation(1460885);out body;>;out skel qt;'
-})
-.then(response => response.json())
-.then(data => {
-    if (data.elements.length > 0) {
-        const ways = data.elements.filter(e => e.type === "way");
-        const nodes = data.elements.filter(e => e.type === "node");
+            fetch('https://overpass-api.de/api/interpreter', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: 'data=[out:json][timeout:25];relation(1460885);out body;>;out skel qt;'
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.elements.length > 0) {
+                    const ways = data.elements.filter(e => e.type === "way");
+                    const nodes = data.elements.filter(e => e.type === "node");
 
-        const boundaries = ways.map(way => {
-            return way.nodes.map(nodeId => {
-                const node = nodes.find(n => n.id === nodeId);
-                return [node.lat, node.lon];
-            });
-        });
+                    const boundaries = ways.map(way => {
+                        return way.nodes.map(nodeId => {
+                            const node = nodes.find(n => n.id === nodeId);
+                            return [node.lat, node.lon];
+                        });
+                    });
 
-        boundaries.forEach(boundary => {
-            L.polyline(boundary, {
-                color: '#970a2c',
-                weight: 3,
-                opacity: 0.7
-            }).addTo(map);
-        });
+                    boundaries.forEach(boundary => {
+                        L.polyline(boundary, {
+                            color: '#970a2c',
+                            weight: 3,
+                            opacity: 0.7
+                        }).addTo(map);
+                    });
 
-        const info = L.control();
-        info.onAdd = function() {
-            this._div = L.DomUtil.create('div', 'info-box');
-            this._div.innerHTML = '<h4>Municipio Roma X</h4>' +
-                'Biblioteca Elsa Morante<br>' +
-                'Via Adolfo Cozza, 7<br>' +
-                'Percorso evidenziato in blu';
-            return this._div;
-        };
-        info.addTo(map);
+                    const info = L.control();
+                    info.onAdd = function() {
+                        this._div = L.DomUtil.create('div', 'info-box');
+                        this._div.innerHTML = '<h4>Municipio Roma X</h4>' +
+                            'Biblioteca Elsa Morante<br>' +
+                            'Via Adolfo Cozza, 7<br>' +
+                            'Percorso evidenziato in blu';
+                        return this._div;
+                    };
+                    info.addTo(map);
 
-        const bounds = L.latLngBounds(boundaries.flat());
-        map.fitBounds(bounds);
-    }
-})
-.catch(error => console.error('Errore nel caricamento dei confini:', error));
-
+                    const bounds = L.latLngBounds(boundaries.flat());
+                    map.fitBounds(bounds);
+                }
+            })
+            .catch(error => console.error('Errore nel caricamento dei confini:', error));
         });
     </script>
 </body>
