--- a/mappa.html
+++ b/mappa.html
@@ -40,19 +40,23 @@
             background: rgba(255, 255, 255, 0.8);
         }
 
-        /* Personalizzazione dell'icona con la scritta sotto */
+        /* Personalizzazione dell'icona con la scritta sotto e con trasparenza */
         .custom-municipio-icon {
             text-align: center;
             font-size: 10px;  /* Ridotto il font */
             color: #333;
+            background-color: rgba(255, 255, 255, 0); /* Rendi trasparente */
+            border: none;
+            display: inline-block;
         }
 
         .municipio-icon-text {
             display: block;
-            margin-top: 3px;  /* Spazio ridotto tra icona e scritta */
-            font-size: 10px;  /* Font ancora più piccolo */
+            margin-top: 2px;  /* Spazio ridotto tra icona e scritta */
+            font-size: 10px;  /* Font più piccolo */
             color: #333;
             line-height: 1; /* Interlinea ridotto */
+            margin-bottom: 0; /* Rimuovi margine inferiore */
         }
     </style>
 </head>
