--- a/mappa.html
+++ b/mappa.html
@@ -30,34 +30,15 @@
             color: #777;
         }
 
-        .custom-popup .leaflet-popup-content-wrapper {
-            background: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-        }
+    .custom-popup .leaflet-popup-content-wrapper {
+        background: rgba(255, 255, 255, 0.8); /* Trasparenza del popup */
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Bordo ombra */
+        border-radius: 5px; /* Bordo arrotondato */
+    }
+    .custom-popup .leaflet-popup-tip {
+        background: rgba(255, 255, 255, 0.8); /* Punta del popup */
+    }
 
-        .custom-popup .leaflet-popup-tip {
-            background: rgba(255, 255, 255, 0.8);
-        }
-
-        /* Personalizzazione dell'icona con la scritta sotto e con trasparenza */
-        .custom-municipio-icon {
-            text-align: center;
-            font-size: 10px;  /* Ridotto il font */
-            color: #333;
-            background-color: rgba(255, 255, 255, 0); /* Rendi trasparente */
-            border: none;
-            display: inline-block;
-        }
-
-        .municipio-icon-text {
-            display: block;
-            margin-top: 2px;  /* Spazio ridotto tra icona e scritta */
-            font-size: 10px;  /* Font più piccolo */
-            color: #333;
-            line-height: 1; /* Interlinea ridotto */
-            margin-bottom: 0; /* Rimuovi margine inferiore */
-        }
     </style>
 </head>
 <body>
@@ -74,30 +55,15 @@
                 attribution: '© OpenStreetMap contributors'
             }).addTo(map);
             
-            const newCoords = [41.732092, 12.270980];
-            const marker = L.marker(newCoords).addTo(map);
-            marker.bindPopup("<b>Biblioteca Elsa Morante</b><br>Via Adolfo Cozza, 7", {
-                className: 'custom-popup'
-            }).openPopup();
+const newCoords = [41.732092, 12.270980]; // Ultima coordinata del percorso blu
+const marker = L.marker(newCoords).addTo(map);
+marker.bindPopup("<b>Biblioteca Elsa Morante</b><br>Via Adolfo Cozza, 7", {
+    className: 'custom-popup'
+}).openPopup();
 
-            // Aggiungi l'icona dell'ufficio tecnico (simbolo municipio) con il testo sotto
-            const municipioIcon = L.divIcon({
-                html: `
-                    <div class="custom-municipio-icon">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="#333">
-                            <path d="M12 3L2 12h3v8h14v-8h3L12 3zm0 2.7L19.7 12H4.3L12 5.7z"/>
-                        </svg>
-                        <span class="municipio-icon-text">Direzione Tecnica Municipio X</span>
-                    </div>
-                `,
-                className: '',
-                iconSize: [24, 30],  // Modificato per adattarsi alla scritta più piccola
-                iconAnchor: [12, 30]  // Allineato correttamente con la scritta sotto
-            });
 
-            const municipioCoords = [41.731731, 12.271812];
-            const municipioMarker = L.marker(municipioCoords, {icon: municipioIcon}).addTo(map);
 
+            // Aggiungi il percorso
             const percorso = [
                 biblioCoords,
                 [41.732154, 12.271675],
@@ -116,10 +82,11 @@
 
             fetch('https://overpass-api.de/api/interpreter', {
                 method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded'
-                },
-                body: 'data=[out:json][timeout:25];relation(1460885);out body;>;out skel qt;'
+                body: `[out:json][timeout:25];
+                       relation(1460885);
+                       out body;
+                       >;
+                       out skel qt;`
             })
             .then(response => response.json())
             .then(data => {
