--- a/mappa.html
+++ b/mappa.html
@@ -115,7 +115,7 @@ marker.bindPopup("<b>Biblioteca Elsa Morante</b><br>Via Adolfo Cozza, 7", {
                         this._div.innerHTML = '<h4>Municipio Roma X</h4>' +
                             'Biblioteca Elsa Morante<br>' +
                             'Via Adolfo Cozza, 7<br>' +
-                            'Percorso evidenziato in blu';
+                            'Percorso tratteggiato in blu';
                         return this._div;
                     };
                     info.addTo(map);
