--- a/raccolta.html
+++ b/raccolta.html
@@ -267,7 +267,7 @@ footer a {
         margin-bottom: 0.3cm;
     }
     h1 {
-        font-size: 14pt;
+        font-size: 12pt;
         color: black !important;
         margin-bottom: 0.6cm;
     }
@@ -299,7 +299,17 @@ footer a {
         display: none !important;
     }
 
- 
+   /* Increase size for main title */
+  h1.text-3xl {
+    font-size: 16pt !important;
+    margin-bottom: 0.5cm !important;
+    font-weight: bold !important;
+  }
+
+  /* Modify bookcrossing points to improve readability */
+  .list-disc.list-inside {
+    font-size: 10pt !important;
+  }
 
      
 }
