--- a/raccolta.html
+++ b/raccolta.html
@@ -299,14 +299,17 @@ footer a {
         display: none !important;
     }
 
+ /* Increased title size */
   h1.text-3xl {
-    font-size: 16pt !important;
-    margin-bottom: 0.5cm !important;
+    font-size: 18pt !important;
+    margin-bottom: 0.6cm !important;
     font-weight: bold !important;
   }
 
+  /* Ensure bookcrossing points have bullets and larger font */
   .list-disc.list-inside {
-    font-size: 12pt !important;
+    list-style-type: disc !important;
+    font-size: 14pt !important;
   }
 
      
