--- a/raccolta.html
+++ b/raccolta.html
@@ -299,17 +299,16 @@ footer a {
         display: none !important;
     }
 
- /* Increased title size */
+  /* Increase size for main title */
   h1.text-3xl {
-    font-size: 18pt !important;
-    margin-bottom: 0.6cm !important;
+    font-size: 16pt !important;
+    margin-bottom: 0.5cm !important;
     font-weight: bold !important;
   }
 
-  /* Ensure bookcrossing points have bullets and larger font */
+  /* Modify bookcrossing points to improve readability */
   .list-disc.list-inside {
-    list-style-type: disc !important;
-    font-size: 14pt !important;
+    font-size: 10pt !important;
   }
 
      
