--- a/mappa.html
+++ b/mappa.html
@@ -142,6 +142,13 @@
                 }
             }
 
+            // Aggiungi evento per la ricerca su pressione Enter
+            document.getElementById('start-point').addEventListener('keypress', function(event) {
+                if (event.key === 'Enter') {
+                    searchRoute();
+                }
+            });
+
             // Focus sul campo di input all'avvio
             document.getElementById('start-point').focus();
 
