--- a/mappa.html
+++ b/mappa.html
@@ -15,46 +15,45 @@
             width: 100%;
         }
         #map {
-            height: calc(100vh - 50px);
+            height: 100vh;
             width: 100%;
         }
-        #search-container {
+        .leaflet-control-search {
             position: absolute;
             top: 10px;
-            left: 50px;
+            left: 10px;
             z-index: 1000;
             background: white;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            border-radius: 4px;
+            border: 2px solid rgba(0,0,0,0.2);
+            box-shadow: 0 1px 5px rgba(0,0,0,0.15);
         }
-        #start-point {
-            width: 250px;
-            margin-right: 10px;
+        .leaflet-control-search input {
+            padding: 8px 30px 8px 10px;
+            width: 200px;
+            border: none;
+            outline: none;
+            font-size: 14px;
         }
-        .info-box {
-            padding: 6px 8px;
-            font: 14px/16px Arial, Helvetica, sans-serif;
-            background: white;
-            background: rgba(255,255,255,0.8);
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            border-radius: 5px;
+        .leaflet-control-search .search-icon {
+            position: absolute;
+            right: 8px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            color: #666;
+        }
+        .leaflet-control-search .search-icon:hover {
+            color: #000;
         }
         .custom-popup .leaflet-popup-content-wrapper {
             background: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
             border-radius: 5px;
-        }
-        .custom-popup .leaflet-popup-tip {
-            background: rgba(255, 255, 255, 0.8);
         }
     </style>
 </head>
 <body>
-    <div id="search-container">
-        <input type="text" id="start-point" placeholder="Inserisci punto di partenza">
-        <button onclick="searchRoute()">Trova Percorso</button>
-    </div>
     <div id="map"></div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
@@ -77,9 +76,9 @@
                 className: 'custom-popup'
             }).openPopup();
 
-            // Percorso tratteggiato aggiornato
+            // Ripristina il percorso tratteggiato originale
             const percorso = [
-                [41.732530, 12.271871], // Nuovo punto di origine    
+                biblioCoords,
                 [41.732154, 12.271675],
                 [41.732282, 12.271254],
                 [41.732240, 12.271230],
@@ -96,9 +95,39 @@
 
             let routingControl = null;
 
-            window.searchRoute = async function() {
-                const startPoint = document.getElementById('start-point').value;
-                
+            // Crea un controllo di ricerca personalizzato
+            const SearchControl = L.Control.extend({
+                options: {
+                    position: 'topleft'
+                },
+
+                onAdd: function(map) {
+                    const container = L.DomUtil.create('div', 'leaflet-control-search');
+                    const input = L.DomUtil.create('input', '', container);
+                    input.type = 'text';
+                    input.placeholder = 'Inserisci punto di partenza';
+
+                    const searchIcon = L.DomUtil.create('span', 'search-icon', container);
+                    searchIcon.innerHTML = '🔍';
+                    searchIcon.title = 'Trova percorso';
+
+                    L.DomEvent.addListener(input, 'keypress', (e) => {
+                        if (e.key === 'Enter') {
+                            searchRoute(input.value);
+                        }
+                    });
+
+                    L.DomEvent.addListener(searchIcon, 'click', () => {
+                        searchRoute(input.value);
+                    });
+
+                    return container;
+                }
+            });
+
+            map.addControl(new SearchControl());
+
+            async function searchRoute(startPoint) {
                 if (routingControl) {
                     map.removeControl(routingControl);
                 }
@@ -142,14 +171,7 @@
                 }
             }
 
-            document.getElementById('start-point').addEventListener('keypress', function(event) {
-                if (event.key === 'Enter') {
-                    searchRoute();
-                }
-            });
-
-            document.getElementById('start-point').focus();
-
+            // Caricamento confini Municipio
             fetch('https://overpass-api.de/api/interpreter', {
                 method: 'POST',
                 body: `[out:json][timeout:25];
@@ -178,20 +200,6 @@
                             opacity: 0.7
                         }).addTo(map);
                     });
-
-                    const info = L.control();
-                    info.onAdd = function() {
-                        this._div = L.DomUtil.create('div', 'info-box');
-                        this._div.innerHTML = '<h4>Municipio Roma X</h4>' +
-                            'Biblioteca Elsa Morante<br>' +
-                            'Via Adolfo Cozza, 7<br>' +
-                            'Trova il tuo percorso';
-                        return this._div;
-                    };
-                    info.addTo(map);
-
-                    const bounds = L.latLngBounds(boundaries.flat());
-                    map.fitBounds(bounds);
                 }
             })
             .catch(error => console.error('Errore nel caricamento dei confini:', error));
