--- a/mappa.html
+++ b/mappa.html
@@ -18,20 +18,42 @@
             height: calc(100vh - 50px);
             width: 100%;
         }
-        #search-container {
+        .search-container {
             position: absolute;
             top: 10px;
             left: 50px;
             z-index: 1000;
-            background: white;
+            background-color: #f1f1f1;
             padding: 10px;
+            display: flex;
+            align-items: center;
             border-radius: 5px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
-        #start-point {
-            width: 250px;
-            margin-right: 10px;
+
+        .search-input {
+            flex-grow: 1;
+            padding: 8px 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
         }
+
+        .search-button {
+            background-color: #4285f4;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-left: 10px;
+        }
+
+        .search-button:hover {
+            background-color: #3367d6;
+        }
+
         .info-box {
             padding: 6px 8px;
             font: 14px/16px Arial, Helvetica, sans-serif;
@@ -51,9 +73,9 @@
     </style>
 </head>
 <body>
-    <div id="search-container">
-        <input type="text" id="start-point" placeholder="Inserisci punto di partenza">
-        <button onclick="searchRoute()">Trova Percorso</button>
+    <div class="search-container">
+        <input type="text" id="start-point" class="search-input" placeholder="Inserisci punto di partenza">
+        <button class="search-button" onclick="searchRoute()">Trova Percorso</button>
     </div>
     <div id="map"></div>
     
