--- a/mappa.html
+++ b/mappa.html
@@ -15,7 +15,7 @@
             width: 100%;
         }
         #map {
-            height: calc(100vh - 50px);
+            height: 100vh;
             width: 100%;
         }
         .search-box {
@@ -47,28 +47,16 @@
             cursor: pointer;
             font-size: 14px;
         }
-        .info-box {
-            padding: 6px 8px;
-            font: 14px/16px Arial, Helvetica, sans-serif;
-            background: white;
-            background: rgba(255,255,255,0.8);
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
-            border-radius: 5px;
-        }
-        .custom-popup .leaflet-popup-content-wrapper {
-            background: rgba(255, 255, 255, 0.8);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-        }
-        .custom-popup .leaflet-popup-tip {
-            background: rgba(255, 255, 255, 0.8);
-        }
         .legend {
             background-color: rgba(255, 255, 255, 0.8);
             padding: 6px 8px;
             font: 14px/16px Arial, Helvetica, sans-serif;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
             border-radius: 5px;
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            z-index: 1000;
         }
         .legend-item {
             display: flex;
