--- a/mappa.html
+++ b/mappa.html
@@ -6,32 +6,80 @@
     <title>Mappa Municipio X - Biblioteca Elsa Morante</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
+    <link rel="icon" href="favicon.png" type="image/png">
     <style>
-        /* Previous styles remain the same */
-        .leaflet-routing-container {
-            position: relative;
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
         }
-        .custom-close-button {
+        #map {
+            height: 100vh;
+            width: 100%;
+        }
+        .search-box {
             position: absolute;
             top: 10px;
-            right: 10px;
-            width: 30px;
-            height: 30px;
-            background: #ff4136;
-            color: white;
-            border-radius: 50%;
+            left: 50px;
+            z-index: 1000;
+            background: white;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
             display: flex;
             align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
         }
-        .custom-close-button:hover {
-            background: #cc0000;
+        .search-box input {
+            width: 250px;
+            margin-right: 10px;
+            padding: 5px 10px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            font-size: 14px;
+        }
+        .search-box button {
+            background-color: #4285F4;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+        .legend {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 6px 8px;
+            font: 14px/16px Arial, Helvetica, sans-serif;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            border-radius: 5px;
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            z-index: 1000;
+        }
+        .legend-item {
+            display: flex;
+            align-items: center;
+        }
+        .legend-item span {
+            width: 16px;
+            height: 16px;
+            margin-right: 4px;
+            background-color: #970a2c;
         }
     </style>
 </head>
 <body>
+    <div class="search-box">
+        <input type="text" id="start-point" placeholder="Inserisci punto di partenza">
+        <button onclick="searchRoute()">Trova Percorso</button>
+    </div>
+    <div id="map"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    
     <!-- Previous HTML remains the same -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
