--- a/mappa.html
+++ b/mappa.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
     <link rel="icon" href="favicon.png" type="image/png">
-  <style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
         body, html {
             margin: 0;
             padding: 0;
@@ -39,19 +40,20 @@
             font-size: 14px;
         }
         .search-box button {
-            background: none;
-            border: none;
-            cursor: pointer;
+            background-color: #4285F4; /* Colore di sfondo per il bottone */
+            border-radius: 50%; /* Bottone rotondo */
+            padding: 8px;
+            width: 40px;
+            height: 40px;
             display: flex;
             align-items: center;
-            margin-left: 5px;
+            justify-content: center;
+            cursor: pointer;
+            border: none;
         }
-        .search-box button svg {
-            stroke: #4285F4;
-        }
-        .search-box button:nth-child(3) {
-            color: black;
-            opacity: 0.6;
+        .search-box button i {
+            color: white; /* Colore dell'icona */
+            font-size: 20px; /* Dimensione dell'icona */
         }
         .legend {
             background-color: rgba(255, 255, 255, 0.8);
